[gd_scene load_steps=5 format=3 uid="uid://bxw4uu7t6ck8q"]

[ext_resource type="PackedScene" uid="uid://bawb02ci81455" path="res://scenes/test_level.tscn" id="1_yqjtg"]
[ext_resource type="PackedScene" uid="uid://cr6nssg54kiew" path="res://scenes/cameraRig.tscn" id="2_lnu2h"]
[ext_resource type="Script" uid="uid://b6savkug2uynt" path="res://hud.gd" id="3_lnu2h"]
[ext_resource type="Script" uid="uid://xuspw0deuucj" path="res://player_controller.gd" id="4_lbhrr"]

[node name="Game" type="Node"]

[node name="PlayerController" type="Node3D" parent="." node_paths=PackedStringArray("hud", "level")]
script = ExtResource("4_lbhrr")
hud = NodePath("../HUD")
level = NodePath("../Level")

[node name="Level" parent="." instance=ExtResource("1_yqjtg")]

[node name="CameraRig" parent="." instance=ExtResource("2_lnu2h")]
transform = Transform3D(0.707107, 0.408607, -0.577096, 0, 0.816138, 0.577858, 0.707107, -0.408607, 0.577096, 0.408063, 11.5441, 15.5268)

[node name="Camera3D" parent="CameraRig" index="0"]
projection = 1
size = 16.038

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_lnu2h")

[node name="TowerBar" type="Control" parent="HUD"]
anchors_preset = 0
offset_left = 417.0
offset_top = 8.0
offset_right = 457.0
offset_bottom = 48.0

[node name="TowerOption" type="OptionButton" parent="HUD/TowerBar"]
layout_mode = 0
offset_left = 117.0
offset_right = 215.0
offset_bottom = 31.0
selected = 0
item_count = 3
popup/item_0/text = "Mirror"
popup/item_0/id = 0
popup/item_1/text = "Concave"
popup/item_1/id = 1
popup/item_2/text = "Convex"
popup/item_2/id = 2

[node name="TowerControls" type="Control" parent="HUD"]
anchors_preset = 0
offset_left = 419.0
offset_top = 290.0
offset_right = 459.0
offset_bottom = 330.0

[node name="MirrorControls" type="Control" parent="HUD/TowerControls"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RotationBar" type="HScrollBar" parent="HUD/TowerControls/MirrorControls"]
layout_mode = 0
offset_top = 24.0
offset_right = 199.0
offset_bottom = 32.0

[node name="RotationLabel" type="RichTextLabel" parent="HUD/TowerControls/MirrorControls"]
layout_mode = 0
offset_right = 221.0
offset_bottom = 23.0
text = "Rotation"

[editable path="CameraRig"]
